Correct module name

--- a/templates/config-oni-plc-270-emd-00006r-20-mr.json.jinja
+++ b/templates/config-oni-plc-270-emd-00006r-20-mr.json.jinja
@@ -1,5 +1,5 @@
-{% with title_en = "PLC-270-EMD-00006R-20-MR (PLC 270 IO Modbus RTU module 6 RO 80A ONI)",
-        title_ru = "PLC-270-EMD-00006R-20-MR (ПЛК 270 Модуль IO Modbus RTU 6 RO 80А ONI)",
+{% with title_en = "PLC-270-EMD-00006R-20-MR, PLC-270-EMD-00006R-60-MR (PLC 270 IO Modbus RTU module 6 RO 80A/165A ONI)",
+        title_ru = "PLC-270-EMD-00006R-20-MR, PLC-270-EMD-00006R-60-MR (ПЛК 270 Модуль IO Modbus RTU 6 RO 80А/165А ONI)",
         device_type = "tpl1_oni_plc_270_emd_00006r_20_mr",
         group = "g-oni",
         device_name = "PLC-270-EMD-00006R-20-MR",
