--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -68,7 +68,7 @@
             "in{{in_num}}_debounce_ms": {
                 "title": "debounce_time_title",
                 "description": "debounce_time_description",
-                "address": {{0x180 + in_num}},
+                "address": {{384 + in_num}},
                 "reg_type": "holding",
                 "min": 0,
                 "max": 2000,
@@ -81,7 +81,7 @@
                 "order": 1,
                 "title": "lp_hold_time_title",
                 "description": "lp_hold_time_description",
-                "address": {{0x1A0 + in_num}},
+                "address": {{416 + in_num}},
                 "reg_type": "holding",
                 "default": 1000,
                 "min": 500,
@@ -92,7 +92,7 @@
                 "title": "secp_waiting_time_title",
                 "description": "secp_waiting_time_description",
                 "order": 2,
-                "address": {{0x1B0 + in_num}},
+                "address": {{432 + in_num}},
                 "reg_type": "holding",
                 "default": 300,
                 "min": 0,
