--- a/templates/config-wb-m1w2-multiple_w1.json.jinja
+++ b/templates/config-wb-m1w2-multiple_w1.json.jinja
@@ -67,6 +67,24 @@
                     }
                 }
             },
+
+            {# Debug begin -> #}    {# TODO: Delete it #}
+            {
+                "title": "Debug",
+                "id": "g_debug"
+            },
+            {
+                "title": "gg_debug_channels",
+                "id": "gg_debug_channels",
+                "group": "g_debug",
+                "ui_options": {
+                    "wb": {
+                        "disable_title": true
+                    }
+                }
+            },
+            {# <- Debug end #}
+
             {
                 "title": "General",
                 "id": "g_general"
@@ -87,7 +105,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": [
-                    "1-Wire",
+                    "1-Wire Bus",
                     "Counting and press detection"
                 ],
                 "group": "g_in{{in_num}}",
@@ -300,7 +318,7 @@
                 "condition": "in{{in_num}}_mode==0"
             },
 
-            {# Single sensor extra registers start #}   {# TODO: Delete it #}
+            {# Debug begin -> #}   {# TODO: Delete it #}
             {
                 "name": "External Sensor {{in_num}} Last Valid Temperature",
                 "reg_type": "input",
@@ -311,7 +329,7 @@
                 "format": "s16",
                 "scale": 0.0625,
                 "error_value": "0x7FFF",
-                "group": "gg_in{{in_num}}_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
             {
@@ -321,10 +339,10 @@
                 "type": "switch",
                 "enabled": false,
                 "format": "u8",
-                "group": "gg_in{{in_num}}_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
-            {# Single sensor extra registers end #}
+            {# <- Debug end #}
 
             {# Multiple sensors registers start #}
             {% for sens_num in range(FIRST_SENSOR, SENSORS_NUMBER + FIRST_SENSOR) -%}
@@ -349,11 +367,8 @@
                 "group": "gg_in{{in_num}}_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
-            {% endfor -%}
-            {# Multiple sensors registers end #}
 
-            {# Multiple sensors extra registers start #}    {# TODO: Delete it #}
-            {% for sens_num in range(FIRST_SENSOR, SENSORS_NUMBER + FIRST_SENSOR) -%}
+            {# Debug begin -> #}    {# TODO: Delete it #}
             {
                 "name": "Bus {{in_num}}: Sensor {{sens_num}} Last Valid Temperature",
                 "reg_type": "input",
@@ -364,7 +379,7 @@
                 "format": "s16",
                 "scale": 0.0625,
                 "error_value": "0x7FFF",
-                "group": "gg_in{{in_num}}_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
             {
@@ -374,11 +389,13 @@
                 "type": "switch",
                 "enabled": false,
                 "format": "u8",
-                "group": "gg_in{{in_num}}_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
+            {# <- Debug end #}
+
             {% endfor -%}
-            {# Multiple sensors extra registers end #}
+            {# Multiple sensors registers end #}
 
             {# New sensors registers start #}
             {
@@ -392,6 +409,8 @@
                 "group": "gg_w1_bus_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
+
+            {# Debug begin -> #}    {# TODO: Delete it #}
             {
                 "name": "Bus {{in_num}}: Number Of New Sensors Saved",
                 "reg_type": "input",
@@ -400,9 +419,11 @@
                 "type": "value",
                 "default": 0,
                 "enabled": false,
-                "group": "gg_w1_bus_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
+            {# <- Debug end #}
+
             {
                 "name": "Bus {{in_num}}: Save New Sensors",
                 "reg_type": "coil",
@@ -428,7 +449,7 @@
             {% endfor -%}
             {# New sensors registers end #}
 
-            {# Multiple sensors debug registers start #}    {# TODO: Delete it #}
+            {# Debug begin -> #}    {# TODO: Delete it #}
             {
                 "name": "Bus {{in_num}}: Number Of Sensors Found",
                 "reg_type": "input",
@@ -437,7 +458,7 @@
                 "type": "value",
                 "default": 0,
                 "enabled": false,
-                "group": "gg_w1_bus_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
             {% for sens_num in range(FIRST_SENSOR, SENSORS_NUMBER + FIRST_SENSOR) -%}
@@ -449,11 +470,11 @@
                 "type": "value",
                 "default": 0,
                 "enabled": false,
-                "group": "gg_w1_bus_channels",
+                "group": "gg_debug_channels",
                 "condition": "in{{in_num}}_mode==0"
             },
             {% endfor -%}
-            {# Multiple sensors debug registers end #}
+            {# <- Debug end #}
 
             {% endfor -%}
             {
@@ -583,7 +604,7 @@
             },
             "ru": {
                 "WB-M1W2_template_title": "WB-M1W2 (2-канальный преобразователь для термометров 1-Wire с функцией счётных входов)",
-                "1-Wire": "Датчик 1-Wire",
+                "1-Wire Bus": "Шина 1-Wire",
                 {% for in_num in range(FIRST_INPUT, INPUTS_NUMBER + 1) -%}
                 "Input {{in_num}}": "Вход {{in_num}}",
                 "Input {{in_num}} counter": "Счетчик {{in_num}}",
@@ -632,7 +653,18 @@
                 "Sensor {{sens_num}} ID": "Идентификатор датчика {{sens_num}}",
                 {% endfor -%}
 
-                "1-Wire Sensors": "Датчики 1-Wire"
+                {% for in_num in range(FIRST_INPUT, INPUTS_NUMBER + 1) -%}
+                "Bus {{in_num}}: Number Of New Sensors": "Шина {{in_num}}: Количество новых датчиков",
+                "Bus {{in_num}}: Save New Sensors": "Шина {{in_num}}: Сохранить новые датчики",
+                {% for sens_num in range(FIRST_SENSOR, SENSORS_NUMBER + FIRST_SENSOR) -%}
+                "Bus {{in_num}}: Sensor {{sens_num}}": "Шина {{in_num}}: Датчик {{sens_num}}",
+                "Bus {{in_num}}: Sensor {{sens_num}} OK": "Шина {{in_num}}: Датчик {{sens_num}} подключен",
+                "Bus {{in_num}}: New Sensor {{sens_num}} ID": "Шина {{in_num}}: Идентификатор нового датчика {{sens_num}}",
+                {% endfor -%}
+                {% endfor -%}
+
+                "1-Wire Sensors": "Датчики 1-Wire",
+                "1-Wire Bus": "Шина 1-Wire"
             }
         }
     }
