--- a/templates/config-wb-mr3.json.jinja
+++ b/templates/config-wb-mr3.json.jinja
@@ -909,9 +909,6 @@
                 "K{{out_num}}": "Command K{{out_num}}",
                 {% endfor -%}
 
-                "startup_delay_description": "0...999, factory default - 0",
-                "restart_delay_description": "0...999, factory default - 0",
-
                 "Curtains Control": "Actuator Control",
                 
                 {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
@@ -921,6 +918,9 @@
                 "Curtain {{curtain_num}} Actions": "Actuator {{curtain_num}} Actions",
                 "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for curtain {{curtain_num}} control": "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for actuator {{curtain_num}} control",
                 {% endfor -%}
+
+                "startup_delay_description": "0...999, factory default - 0",
+                "restart_delay_description": "0...999, factory default - 0"
             },
             "ru": {
                 "WB-MR3_template_title": "WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-канальный модуль реле)",
