--- a/templates/config-wb-mr6cu.json.jinja
+++ b/templates/config-wb-mr6cu.json.jinja
@@ -455,9 +455,6 @@
                 "K{{out_num}}": "Command K{{out_num}}",
                 {% endfor -%}
 
-                "startup_delay_description": "0...999, factory default - 0",
-                "restart_delay_description": "0...999, factory default - 0",
-
                 "Curtains Control": "Actuator Control",
                 
                 {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
@@ -466,6 +463,9 @@
                 "Curtain {{curtain_num}} Close": "Actuator {{curtain_num}} Close",                
                 "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for curtain {{curtain_num}} control": "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for actuator {{curtain_num}} control",
                 {% endfor -%}
+
+                "startup_delay_description": "0...999, factory default - 0",
+                "restart_delay_description": "0...999, factory default - 0"
             },
             "ru": {
                 "WB-MR6CU_template_title": "WB-MR6CU v.2, WB-MRPS6 (6-канальный модуль реле)",
