--- a/templates/config-wb-mr6cv3.json.jinja
+++ b/templates/config-wb-mr6cv3.json.jinja
@@ -932,9 +932,6 @@
                 "K{{out_num}}": "Command K{{out_num}}",
                 {% endfor -%}
 
-                "startup_delay_description": "0...999, factory default - 0",
-                "restart_delay_description": "0...999, factory default - 0",
-
                 "Curtains Control": "Actuator Control",
                 
                 {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
@@ -944,6 +941,9 @@
                 "Curtain {{curtain_num}} Actions": "Actuator {{curtain_num}} Actions",
                 "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for curtain {{curtain_num}} control": "Use outputs {{curtain_num * 2 - 1}} and {{curtain_num * 2}} for actuator {{curtain_num}} control",
                 {% endfor -%}
+
+                "startup_delay_description": "0...999, factory default - 0",
+                "restart_delay_description": "0...999, factory default - 0"
             },
             "ru": {
                 "WB-MR6Cv3_template_title": "WB-MR6C v.3 (6-канальный модуль реле с внутренним блоком питания)",
