--- a/templates/config-wb-m1w2-multiple_w1.json.jinja
+++ b/templates/config-wb-m1w2-multiple_w1.json.jinja
@@ -155,6 +155,7 @@
                 "reg_type": "holding",
                 "address": {{5632 + 4 * (sens_num - FIRST_SENSOR) + 4 * SENSORS_NUMBER_WITH_RESERVE * (in_num - FIRST_INPUT)}},
                 "format": "u64",
+                "type": "w1_id",
                 "group": "gg_in{{in_num}}_sensors",
                 "order": {{1 + (sens_num - FIRST_SENSOR)}},
                 "condition": "in{{in_num}}_mode==0"
@@ -430,7 +431,7 @@
                 "reg_type": "input",
                 "format": "u64",
                 "address": {{3680 + 4 * (sens_num - FIRST_SENSOR) + 4 * SENSORS_NUMBER_WITH_RESERVE * (in_num - FIRST_INPUT)}},
-                "type": "value",
+                "type": "w1_id",
                 "default": 0,
                 "enabled": false,
                 "group": "gg_w1_bus_channels",
@@ -457,7 +458,7 @@
                 "reg_type": "input",
                 "format": "u64",
                 "address": {{4352 + 4 * (sens_num - FIRST_SENSOR) + 4 * SENSORS_NUMBER_WITH_RESERVE * (in_num - FIRST_INPUT)}},
-                "type": "value",
+                "type": "w1_id",
                 "default": 0,
                 "enabled": false,
                 "group": "gg_debug_channels",
@@ -653,8 +654,7 @@
                 {% endfor -%}
                 {% endfor -%}
 
-                "1-Wire Sensors": "Датчики 1-Wire",
-                "1-Wire Bus": "Шина 1-Wire"
+                "1-Wire Sensors": "Датчики 1-Wire"
             }
         }
     }
